--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,8 +18,17 @@ android {
         applicationId "pl.gratitude.brighter"
         minSdkVersion 17
         targetSdkVersion 23
+        versionCode 1
+        versionName '01.02.29'
     }
     productFlavors {
+    }
+    dexOptions {
+        incremental true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 // called every time gradle gets executed, takes the native dependencies of
